# Aurora

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: 01_empty.rs  02_lines.rs  03_rect.rs  04_text.rs
src/: baseapp.rs  lib.rs  setup.rs  start.rs
src/geometry/: geometry.rs  mod.rs
src/material/: manager.rs  mod.rs  texture.rs  util.rs
src/renderer/: command_executor.rs  command_manager.rs  command_processor.rs  commands.rs  instances.rs  mod.rs  render_commands.rs  renderer.rs  section_manager.rs
src/renderer/pipelines/: line_pipeline.rs  manager.rs  mod.rs  pipeline_2d.rs  pipeline_lines.rs  pipeline_text.rs  uniforms.rs  util.rs
src/renderer/pipelines/shaders/: lines.frag  lines.vert  lines_Fragment.spirv  lines_Vertex.spirv  lines_pipeline.wgsl  two_d_pipeline.frag  two_d_pipeline.vert  two_d_pipeline.wgsl  two_d_pipeline_Fragment.spirv  two_d_pipeline_Vertex.spirv
