[package]
name = "aurora"
version = "0.0.0"
authors = ["James Tooke <j.w.tooke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aurora"
path = "src/lib.rs"

[dependencies]
wgpu = "0.6.2"
wgpu_glyph = "0.10.0"