[package]
name = "aurora"
version = "0.0.15"
authors = ["James Tooke <j.w.tooke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aurora"
path = "src/lib.rs"

[build-dependencies]
shaderc = "0.7.0"

[dependencies]
bytemuck = { version = "1.4.1", features = ["derive"] }
cgmath = "0.18.0"
futures = "0.3.8"
log = "0.4.11"
png = "0.17.2"
wgpu = { version = "0.12.0", features = ["spirv"] }
wgpu_glyph = "0.16.0"
winit = { version = "0.26.0" }